Project/Parser/Apr16/C57.output
Terminals which are not used

   STATIC
   STRUCT
   EXTERN
   NIL
   PRECMP
   ILLEGALID
   OTHER
   DIVEQ
   MULEQ
   MINUSEQ
   PLUSEQ
   DEREF
   ADDR
   DOT
   ARROW


State 185 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declaration_list

    2 declaration_list: declaration_list declaration
    3                 | declaration

    4 declaration: var_declaration
    5            | func_declaration
    6            | func_prototype

    7 var_declaration: CONST type_specifier var_decl_list SEMICOLON
    8                | type_specifier CONST var_decl_list SEMICOLON
    9                | type_specifier var_decl_list SEMICOLON

   10 type_specifier: INT
   11               | DOUBLE

   12 var_decl_list: var_decl_list COMMA var_decl
   13              | var_decl

   14 var_decl: ID
   15         | ID ASSIGN expression
   16         | ID LSQRBRKT expression RSQRBRKT

   17 func_declaration: type_specifier ID LBRKT formal_params RBRKT compound_statement
   18                 | VOID ID LBRKT formal_params RBRKT compound_statement

   19 func_prototype: VOID ID LBRKT formal_params RBRKT SEMICOLON
   20               | type_specifier ID LBRKT formal_params RBRKT SEMICOLON

   21 formal_params: formal_list
   22              | VOID
   23              | /* empty */

   24 formal_list: formal_list COMMA formal_param
   25            | formal_param

   26 formal_param: type_specifier ID
   27             | type_specifier ID LSQRBRKT RSQRBRKT

   28 compound_statement: LCLYBRKT local_declarations statement_list RCLYBRKT

   29 local_declarations: local_declarations var_declaration
   30                   | /* empty */

   31 statement_list: statement_list statement
   32               | /* empty */

   33 statement: expression_statement
   34          | compound_statement
   35          | if_statement
   36          | while_statement
   37          | do_while_statement
   38          | for_statement
   39          | return_statement
   40          | read_statement
   41          | print_statement
   42          | break_statement
   43          | continue_statement
   44          | switch_statement
   45          | case_statement
   46          | default_statement

   47 expression_statement: expression SEMICOLON
   48                     | SEMICOLON

   49 if_statement: IF LBRKT expression RBRKT statement
   50             | IF LBRKT expression RBRKT statement ELSE statement

   51 while_statement: WHILE LBRKT expression RBRKT statement

   52 do_while_statement: DO statement WHILE LBRKT expression RBRKT SEMICOLON

   53 for_statement: FOR LBRKT for_header_expression SEMICOLON for_header_expression SEMICOLON for_header_expression RBRKT statement

   54 for_header_expression: expression
   55                      | /* empty */

   56 return_statement: RETURN SEMICOLON
   57                 | RETURN expression SEMICOLON

   58 read_statement: READ var SEMICOLON

   59 print_statement: PRINT expression SEMICOLON
   60                | PRINT STRING SEMICOLON

   61 expression: var ASSIGN expression
   62           | r_value

   63 var: ID
   64    | ID LSQRBRKT expression RSQRBRKT

   65 r_value: expression PLUS expression
   66        | expression MINUS expression
   67        | expression STAR expression
   68        | expression DIV expression
   69        | expression MOD expression
   70        | expression LESS expression
   71        | expression LESSEQ expression
   72        | expression GRTER expression
   73        | expression GRTEREQ expression
   74        | expression EQ expression
   75        | expression NEQ expression
   76        | expression AND expression
   77        | expression OR expression
   78        | NOT expression
   79        | MINUS expression
   80        | var
   81        | INC var
   82        | DEC var
   83        | var INC
   84        | var DEC
   85        | LBRKT expression RBRKT
   86        | call
   87        | NUM
   88        | FNUM
   89        | sizeof_expression

   90 call: ID LBRKT args RBRKT

   91 args: arg_list
   92     | /* empty */

   93 arg_list: arg_list COMMA expression
   94         | expression

   95 break_statement: BREAK SEMICOLON

   96 continue_statement: CONTINUE SEMICOLON

   97 case_statement: CASE NUM COLON statement

   98 default_statement: DEFAULT COLON statement

   99 switch_statement: SWITCH LBRKT expression RBRKT statement

  100 sizeof_expression: SIZEOF LBRKT type_specifier RBRKT
  101                  | SIZEOF LBRKT expression RBRKT


Terminals, with rules where they appear

$end (0) 0
error (256)
ELSE (258) 50
IF (259) 49 50
INT (260) 10
RETURN (261) 56 57
VOID (262) 18 19 22
WHILE (263) 51 52
FOR (264) 53
DO (265) 52
DOUBLE (266) 11
BREAK (267) 95
CONTINUE (268) 96
CONST (269) 7 8
SWITCH (270) 99
STATIC (271)
STRUCT (272)
EXTERN (273)
DEFAULT (274) 98
CASE (275) 97
NIL (276)
READ (277) 58
PRINT (278) 59 60
SEMICOLON (279) 7 8 9 19 20 47 48 52 53 56 57 58 59 60 95 96
LBRKT (280) 17 18 19 20 49 50 51 52 53 85 90 99 100 101
RBRKT (281) 17 18 19 20 49 50 51 52 53 85 90 99 100 101
LSQRBRKT (282) 16 27 64
RSQRBRKT (283) 16 27 64
LCLYBRKT (284) 28
RCLYBRKT (285) 28
PRECMP (286)
COLON (287) 97 98
INC (288) 81 83
DEC (289) 82 84
ID (290) 14 15 16 17 18 19 20 26 27 63 64 90
NUM (291) 87 97
FNUM (292) 88
STRING (293) 60
ILLEGALID (294)
OTHER (295)
COMMA (296) 12 24 93
DIVEQ (297)
MULEQ (298)
MINUSEQ (299)
PLUSEQ (300)
ASSIGN (301) 15 61
OR (302) 77
AND (303) 76
NEQ (304) 75
EQ (305) 74
GRTEREQ (306) 73
GRTER (307) 72
LESSEQ (308) 71
LESS (309) 70
MINUS (310) 66 79
PLUS (311) 65
MOD (312) 69
DIV (313) 68
STAR (314) 67
SIZEOF (315) 100 101
DECPRE (316)
INCPRE (317)
NOT (318) 78
UMINUS (319)
DEREF (320)
ADDR (321)
DECPOST (322)
INCPOST (323)
DOT (324)
ARROW (325)


Nonterminals, with rules where they appear

$accept (71)
    on left: 0
program (72)
    on left: 1, on right: 0
declaration_list (73)
    on left: 2 3, on right: 1 2
declaration (74)
    on left: 4 5 6, on right: 2 3
var_declaration (75)
    on left: 7 8 9, on right: 4 29
type_specifier (76)
    on left: 10 11, on right: 7 8 9 17 20 26 27 100
var_decl_list (77)
    on left: 12 13, on right: 7 8 9 12
var_decl (78)
    on left: 14 15 16, on right: 12 13
func_declaration (79)
    on left: 17 18, on right: 5
func_prototype (80)
    on left: 19 20, on right: 6
formal_params (81)
    on left: 21 22 23, on right: 17 18 19 20
formal_list (82)
    on left: 24 25, on right: 21 24
formal_param (83)
    on left: 26 27, on right: 24 25
compound_statement (84)
    on left: 28, on right: 17 18 34
local_declarations (85)
    on left: 29 30, on right: 28 29
statement_list (86)
    on left: 31 32, on right: 28 31
statement (87)
    on left: 33 34 35 36 37 38 39 40 41 42 43 44 45 46,
    on right: 31 49 50 51 52 53 97 98 99
expression_statement (88)
    on left: 47 48, on right: 33
if_statement (89)
    on left: 49 50, on right: 35
while_statement (90)
    on left: 51, on right: 36
do_while_statement (91)
    on left: 52, on right: 37
for_statement (92)
    on left: 53, on right: 38
for_header_expression (93)
    on left: 54 55, on right: 53
return_statement (94)
    on left: 56 57, on right: 39
read_statement (95)
    on left: 58, on right: 40
print_statement (96)
    on left: 59 60, on right: 41
expression (97)
    on left: 61 62, on right: 15 16 47 49 50 51 52 54 57 59 61 64 65
    66 67 68 69 70 71 72 73 74 75 76 77 78 79 85 93 94 99 101
var (98)
    on left: 63 64, on right: 58 61 80 81 82 83 84
r_value (99)
    on left: 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82
    83 84 85 86 87 88 89, on right: 62
call (100)
    on left: 90, on right: 86
args (101)
    on left: 91 92, on right: 90
arg_list (102)
    on left: 93 94, on right: 91 93
break_statement (103)
    on left: 95, on right: 42
continue_statement (104)
    on left: 96, on right: 43
case_statement (105)
    on left: 97, on right: 45
default_statement (106)
    on left: 98, on right: 46
switch_statement (107)
    on left: 99, on right: 44
sizeof_expression (108)
    on left: 100 101, on right: 89


state 0

    0 $accept: . program $end

    INT     shift, and go to state 1
    VOID    shift, and go to state 2
    DOUBLE  shift, and go to state 3
    CONST   shift, and go to state 4

    program           go to state 5
    declaration_list  go to state 6
    declaration       go to state 7
    var_declaration   go to state 8
    type_specifier    go to state 9
    func_declaration  go to state 10
    func_prototype    go to state 11


state 1

   10 type_specifier: INT .

    $default  reduce using rule 10 (type_specifier)


state 2

   18 func_declaration: VOID . ID LBRKT formal_params RBRKT compound_statement
   19 func_prototype: VOID . ID LBRKT formal_params RBRKT SEMICOLON

    ID  shift, and go to state 12


state 3

   11 type_specifier: DOUBLE .

    $default  reduce using rule 11 (type_specifier)


state 4

    7 var_declaration: CONST . type_specifier var_decl_list SEMICOLON

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 3

    type_specifier  go to state 13


state 5

    0 $accept: program . $end

    $end  shift, and go to state 14


state 6

    1 program: declaration_list .
    2 declaration_list: declaration_list . declaration

    INT     shift, and go to state 1
    VOID    shift, and go to state 2
    DOUBLE  shift, and go to state 3
    CONST   shift, and go to state 4

    $default  reduce using rule 1 (program)

    declaration       go to state 15
    var_declaration   go to state 8
    type_specifier    go to state 9
    func_declaration  go to state 10
    func_prototype    go to state 11


state 7

    3 declaration_list: declaration .

    $default  reduce using rule 3 (declaration_list)


state 8

    4 declaration: var_declaration .

    $default  reduce using rule 4 (declaration)


state 9

    8 var_declaration: type_specifier . CONST var_decl_list SEMICOLON
    9                | type_specifier . var_decl_list SEMICOLON
   17 func_declaration: type_specifier . ID LBRKT formal_params RBRKT compound_statement
   20 func_prototype: type_specifier . ID LBRKT formal_params RBRKT SEMICOLON

    CONST  shift, and go to state 16
    ID     shift, and go to state 17

    var_decl_list  go to state 18
    var_decl       go to state 19


state 10

    5 declaration: func_declaration .

    $default  reduce using rule 5 (declaration)


state 11

    6 declaration: func_prototype .

    $default  reduce using rule 6 (declaration)


state 12

   18 func_declaration: VOID ID . LBRKT formal_params RBRKT compound_statement
   19 func_prototype: VOID ID . LBRKT formal_params RBRKT SEMICOLON

    LBRKT  shift, and go to state 20


state 13

    7 var_declaration: CONST type_specifier . var_decl_list SEMICOLON

    ID  shift, and go to state 21

    var_decl_list  go to state 22
    var_decl       go to state 19


state 14

    0 $accept: program $end .

    $default  accept


state 15

    2 declaration_list: declaration_list declaration .

    $default  reduce using rule 2 (declaration_list)


state 16

    8 var_declaration: type_specifier CONST . var_decl_list SEMICOLON

    ID  shift, and go to state 21

    var_decl_list  go to state 23
    var_decl       go to state 19


state 17

   14 var_decl: ID .
   15         | ID . ASSIGN expression
   16         | ID . LSQRBRKT expression RSQRBRKT
   17 func_declaration: type_specifier ID . LBRKT formal_params RBRKT compound_statement
   20 func_prototype: type_specifier ID . LBRKT formal_params RBRKT SEMICOLON

    LBRKT     shift, and go to state 24
    LSQRBRKT  shift, and go to state 25
    ASSIGN    shift, and go to state 26

    $default  reduce using rule 14 (var_decl)


state 18

    9 var_declaration: type_specifier var_decl_list . SEMICOLON
   12 var_decl_list: var_decl_list . COMMA var_decl

    SEMICOLON  shift, and go to state 27
    COMMA      shift, and go to state 28


state 19

   13 var_decl_list: var_decl .

    $default  reduce using rule 13 (var_decl_list)


state 20

   18 func_declaration: VOID ID LBRKT . formal_params RBRKT compound_statement
   19 func_prototype: VOID ID LBRKT . formal_params RBRKT SEMICOLON

    INT     shift, and go to state 1
    VOID    shift, and go to state 29
    DOUBLE  shift, and go to state 3

    $default  reduce using rule 23 (formal_params)

    type_specifier  go to state 30
    formal_params   go to state 31
    formal_list     go to state 32
    formal_param    go to state 33


state 21

   14 var_decl: ID .
   15         | ID . ASSIGN expression
   16         | ID . LSQRBRKT expression RSQRBRKT

    LSQRBRKT  shift, and go to state 25
    ASSIGN    shift, and go to state 26

    $default  reduce using rule 14 (var_decl)


state 22

    7 var_declaration: CONST type_specifier var_decl_list . SEMICOLON
   12 var_decl_list: var_decl_list . COMMA var_decl

    SEMICOLON  shift, and go to state 34
    COMMA      shift, and go to state 28


state 23

    8 var_declaration: type_specifier CONST var_decl_list . SEMICOLON
   12 var_decl_list: var_decl_list . COMMA var_decl

    SEMICOLON  shift, and go to state 35
    COMMA      shift, and go to state 28


state 24

   17 func_declaration: type_specifier ID LBRKT . formal_params RBRKT compound_statement
   20 func_prototype: type_specifier ID LBRKT . formal_params RBRKT SEMICOLON

    INT     shift, and go to state 1
    VOID    shift, and go to state 29
    DOUBLE  shift, and go to state 3

    $default  reduce using rule 23 (formal_params)

    type_specifier  go to state 30
    formal_params   go to state 36
    formal_list     go to state 32
    formal_param    go to state 33


state 25

   16 var_decl: ID LSQRBRKT . expression RSQRBRKT

    LBRKT   shift, and go to state 37
    INC     shift, and go to state 38
    DEC     shift, and go to state 39
    ID      shift, and go to state 40
    NUM     shift, and go to state 41
    FNUM    shift, and go to state 42
    MINUS   shift, and go to state 43
    SIZEOF  shift, and go to state 44
    NOT     shift, and go to state 45

    expression         go to state 46
    var                go to state 47
    r_value            go to state 48
    call               go to state 49
    sizeof_expression  go to state 50


state 26

   15 var_decl: ID ASSIGN . expression

    LBRKT   shift, and go to state 37
    INC     shift, and go to state 38
    DEC     shift, and go to state 39
    ID      shift, and go to state 40
    NUM     shift, and go to state 41
    FNUM    shift, and go to state 42
    MINUS   shift, and go to state 43
    SIZEOF  shift, and go to state 44
    NOT     shift, and go to state 45

    expression         go to state 51
    var                go to state 47
    r_value            go to state 48
    call               go to state 49
    sizeof_expression  go to state 50


state 27

    9 var_declaration: type_specifier var_decl_list SEMICOLON .

    $default  reduce using rule 9 (var_declaration)


state 28

   12 var_decl_list: var_decl_list COMMA . var_decl

    ID  shift, and go to state 21

    var_decl  go to state 52


state 29

   22 formal_params: VOID .

    $default  reduce using rule 22 (formal_params)


state 30

   26 formal_param: type_specifier . ID
   27             | type_specifier . ID LSQRBRKT RSQRBRKT

    ID  shift, and go to state 53


state 31

   18 func_declaration: VOID ID LBRKT formal_params . RBRKT compound_statement
   19 func_prototype: VOID ID LBRKT formal_params . RBRKT SEMICOLON

    RBRKT  shift, and go to state 54


state 32

   21 formal_params: formal_list .
   24 formal_list: formal_list . COMMA formal_param

    COMMA  shift, and go to state 55

    $default  reduce using rule 21 (formal_params)


state 33

   25 formal_list: formal_param .

    $default  reduce using rule 25 (formal_list)


state 34

    7 var_declaration: CONST type_specifier var_decl_list SEMICOLON .

    $default  reduce using rule 7 (var_declaration)


state 35

    8 var_declaration: type_specifier CONST var_decl_list SEMICOLON .

    $default  reduce using rule 8 (var_declaration)


state 36

   17 func_declaration: type_specifier ID LBRKT formal_params . RBRKT compound_statement
   20 func_prototype: type_specifier ID LBRKT formal_params . RBRKT SEMICOLON

    RBRKT  shift, and go to state 56


state 37

   85 r_value: LBRKT . expression RBRKT

    LBRKT   shift, and go to state 37
    INC     shift, and go to state 38
    DEC     shift, and go to state 39
    ID      shift, and go to state 40
    NUM     shift, and go to state 41
    FNUM    shift, and go to state 42
    MINUS   shift, and go to state 43
    SIZEOF  shift, and go to state 44
    NOT     shift, and go to state 45

    expression         go to state 57
    var                go to state 47
    r_value            go to state 48
    call               go to state 49
    sizeof_expression  go to state 50


state 38

   81 r_value: INC . var

    ID  shift, and go to state 58

    var  go to state 59


state 39

   82 r_value: DEC . var

    ID  shift, and go to state 58

    var  go to state 60


state 40

   63 var: ID .
   64    | ID . LSQRBRKT expression RSQRBRKT
   90 call: ID . LBRKT args RBRKT

    LBRKT     shift, and go to state 61
    LSQRBRKT  shift, and go to state 62

    $default  reduce using rule 63 (var)


state 41

   87 r_value: NUM .

    $default  reduce using rule 87 (r_value)


state 42

   88 r_value: FNUM .

    $default  reduce using rule 88 (r_value)


state 43

   79 r_value: MINUS . expression

    LBRKT   shift, and go to state 37
    INC     shift, and go to state 38
    DEC     shift, and go to state 39
    ID      shift, and go to state 40
    NUM     shift, and go to state 41
    FNUM    shift, and go to state 42
    MINUS   shift, and go to state 43
    SIZEOF  shift, and go to state 44
    NOT     shift, and go to state 45

    expression         go to state 63
    var                go to state 47
    r_value            go to state 48
    call               go to state 49
    sizeof_expression  go to state 50


state 44

  100 sizeof_expression: SIZEOF . LBRKT type_specifier RBRKT
  101                  | SIZEOF . LBRKT expression RBRKT

    LBRKT  shift, and go to state 64


state 45

   78 r_value: NOT . expression

    LBRKT   shift, and go to state 37
    INC     shift, and go to state 38
    DEC     shift, and go to state 39
    ID      shift, and go to state 40
    NUM     shift, and go to state 41
    FNUM    shift, and go to state 42
    MINUS   shift, and go to state 43
    SIZEOF  shift, and go to state 44
    NOT     shift, and go to state 45

    expression         go to state 65
    var                go to state 47
    r_value            go to state 48
    call               go to state 49
    sizeof_expression  go to state 50


state 46

   16 var_decl: ID LSQRBRKT expression . RSQRBRKT
   65 r_value: expression . PLUS expression
   66        | expression . MINUS expression
   67        | expression . STAR expression
   68        | expression . DIV expression
   69        | expression . MOD expression
   70        | expression . LESS expression
   71        | expression . LESSEQ expression
   72        | expression . GRTER expression
   73        | expression . GRTEREQ expression
   74        | expression . EQ expression
   75        | expression . NEQ expression
   76        | expression . AND expression
   77        | expression . OR expression

    RSQRBRKT  shift, and go to state 66
    OR        shift, and go to state 67
    AND       shift, and go to state 68
    NEQ       shift, and go to state 69
    EQ        shift, and go to state 70
    GRTEREQ   shift, and go to state 71
    GRTER     shift, and go to state 72
    LESSEQ    shift, and go to state 73
    LESS      shift, and go to state 74
    MINUS     shift, and go to state 75
    PLUS      shift, and go to state 76
    MOD       shift, and go to state 77
    DIV       shift, and go to state 78
    STAR      shift, and go to state 79


state 47

   61 expression: var . ASSIGN expression
   80 r_value: var .
   83        | var . INC
   84        | var . DEC

    INC     shift, and go to state 80
    DEC     shift, and go to state 81
    ASSIGN  shift, and go to state 82

    $default  reduce using rule 80 (r_value)


state 48

   62 expression: r_value .

    $default  reduce using rule 62 (expression)


state 49

   86 r_value: call .

    $default  reduce using rule 86 (r_value)


state 50

   89 r_value: sizeof_expression .

    $default  reduce using rule 89 (r_value)


state 51

   15 var_decl: ID ASSIGN expression .
   65 r_value: expression . PLUS expression
   66        | expression . MINUS expression
   67        | expression . STAR expression
   68        | expression . DIV expression
   69        | expression . MOD expression
   70        | expression . LESS expression
   71        | expression . LESSEQ expression
   72        | expression . GRTER expression
   73        | expression . GRTEREQ expression
   74        | expression . EQ expression
   75        | expression . NEQ expression
   76        | expression . AND expression
   77        | expression . OR expression

    OR       shift, and go to state 67
    AND      shift, and go to state 68
    NEQ      shift, and go to state 69
    EQ       shift, and go to state 70
    GRTEREQ  shift, and go to state 71
    GRTER    shift, and go to state 72
    LESSEQ   shift, and go to state 73
    LESS     shift, and go to state 74
    MINUS    shift, and go to state 75
    PLUS     shift, and go to state 76
    MOD      shift, and go to state 77
    DIV      shift, and go to state 78
    STAR     shift, and go to state 79

    $default  reduce using rule 15 (var_decl)


state 52

   12 var_decl_list: var_decl_list COMMA var_decl .

    $default  reduce using rule 12 (var_decl_list)


state 53

   26 formal_param: type_specifier ID .
   27             | type_specifier ID . LSQRBRKT RSQRBRKT

    LSQRBRKT  shift, and go to state 83

    $default  reduce using rule 26 (formal_param)


state 54

   18 func_declaration: VOID ID LBRKT formal_params RBRKT . compound_statement
   19 func_prototype: VOID ID LBRKT formal_params RBRKT . SEMICOLON

    SEMICOLON  shift, and go to state 84
    LCLYBRKT   shift, and go to state 85

    compound_statement  go to state 86


state 55

   24 formal_list: formal_list COMMA . formal_param

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 3

    type_specifier  go to state 30
    formal_param    go to state 87


state 56

   17 func_declaration: type_specifier ID LBRKT formal_params RBRKT . compound_statement
   20 func_prototype: type_specifier ID LBRKT formal_params RBRKT . SEMICOLON

    SEMICOLON  shift, and go to state 88
    LCLYBRKT   shift, and go to state 85

    compound_statement  go to state 89


state 57

   65 r_value: expression . PLUS expression
   66        | expression . MINUS expression
   67        | expression . STAR expression
   68        | expression . DIV expression
   69        | expression . MOD expression
   70        | expression . LESS expression
   71        | expression . LESSEQ expression
   72        | expression . GRTER expression
   73        | expression . GRTEREQ expression
   74        | expression . EQ expression
   75        | expression . NEQ expression
   76        | expression . AND expression
   77        | expression . OR expression
   85        | LBRKT expression . RBRKT

    RBRKT    shift, and go to state 90
    OR       shift, and go to state 67
    AND      shift, and go to state 68
    NEQ      shift, and go to state 69
    EQ       shift, and go to state 70
    GRTEREQ  shift, and go to state 71
    GRTER    shift, and go to state 72
    LESSEQ   shift, and go to state 73
    LESS     shift, and go to state 74
    MINUS    shift, and go to state 75
    PLUS     shift, and go to state 76
    MOD      shift, and go to state 77
    DIV      shift, and go to state 78
    STAR     shift, and go to state 79


state 58

   63 var: ID .
   64    | ID . LSQRBRKT expression RSQRBRKT

    LSQRBRKT  shift, and go to state 62

    $default  reduce using rule 63 (var)


state 59

   81 r_value: INC var .

    $default  reduce using rule 81 (r_value)


state 60

   82 r_value: DEC var .

    $default  reduce using rule 82 (r_value)


state 61

   90 call: ID LBRKT . args RBRKT

    LBRKT   shift, and go to state 37
    INC     shift, and go to state 38
    DEC     shift, and go to state 39
    ID      shift, and go to state 40
    NUM     shift, and go to state 41
    FNUM    shift, and go to state 42
    MINUS   shift, and go to state 43
    SIZEOF  shift, and go to state 44
    NOT     shift, and go to state 45

    $default  reduce using rule 92 (args)

    expression         go to state 91
    var                go to state 47
    r_value            go to state 48
    call               go to state 49
    args               go to state 92
    arg_list           go to state 93
    sizeof_expression  go to state 50


state 62

   64 var: ID LSQRBRKT . expression RSQRBRKT

    LBRKT   shift, and go to state 37
    INC     shift, and go to state 38
    DEC     shift, and go to state 39
    ID      shift, and go to state 40
    NUM     shift, and go to state 41
    FNUM    shift, and go to state 42
    MINUS   shift, and go to state 43
    SIZEOF  shift, and go to state 44
    NOT     shift, and go to state 45

    expression         go to state 94
    var                go to state 47
    r_value            go to state 48
    call               go to state 49
    sizeof_expression  go to state 50


state 63

   65 r_value: expression . PLUS expression
   66        | expression . MINUS expression
   67        | expression . STAR expression
   68        | expression . DIV expression
   69        | expression . MOD expression
   70        | expression . LESS expression
   71        | expression . LESSEQ expression
   72        | expression . GRTER expression
   73        | expression . GRTEREQ expression
   74        | expression . EQ expression
   75        | expression . NEQ expression
   76        | expression . AND expression
   77        | expression . OR expression
   79        | MINUS expression .

    $default  reduce using rule 79 (r_value)


state 64

  100 sizeof_expression: SIZEOF LBRKT . type_specifier RBRKT
  101                  | SIZEOF LBRKT . expression RBRKT

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 3
    LBRKT   shift, and go to state 37
    INC     shift, and go to state 38
    DEC     shift, and go to state 39
    ID      shift, and go to state 40
    NUM     shift, and go to state 41
    FNUM    shift, and go to state 42
    MINUS   shift, and go to state 43
    SIZEOF  shift, and go to state 44
    NOT     shift, and go to state 45

    type_specifier     go to state 95
    expression         go to state 96
    var                go to state 47
    r_value            go to state 48
    call               go to state 49
    sizeof_expression  go to state 50


state 65

   65 r_value: expression . PLUS expression
   66        | expression . MINUS expression
   67        | expression . STAR expression
   68        | expression . DIV expression
   69        | expression . MOD expression
   70        | expression . LESS expression
   71        | expression . LESSEQ expression
   72        | expression . GRTER expression
   73        | expression . GRTEREQ expression
   74        | expression . EQ expression
   75        | expression . NEQ expression
   76        | expression . AND expression
   77        | expression . OR expression
   78        | NOT expression .

    $default  reduce using rule 78 (r_value)


state 66

   16 var_decl: ID LSQRBRKT expression RSQRBRKT .

    $default  reduce using rule 16 (var_decl)


state 67

   77 r_value: expression OR . expression

    LBRKT   shift, and go to state 37
    INC     shift, and go to state 38
    DEC     shift, and go to state 39
    ID      shift, and go to state 40
    NUM     shift, and go to state 41
    FNUM    shift, and go to state 42
    MINUS   shift, and go to state 43
    SIZEOF  shift, and go to state 44
    NOT     shift, and go to state 45

    expression         go to state 97
    var                go to state 47
    r_value            go to state 48
    call               go to state 49
    sizeof_expression  go to state 50


state 68

   76 r_value: expression AND . expression

    LBRKT   shift, and go to state 37
    INC     shift, and go to state 38
    DEC     shift, and go to state 39
    ID      shift, and go to state 40
    NUM     shift, and go to state 41
    FNUM    shift, and go to state 42
    MINUS   shift, and go to state 43
    SIZEOF  shift, and go to state 44
    NOT     shift, and go to state 45

    expression         go to state 98
    var                go to state 47
    r_value            go to state 48
    call               go to state 49
    sizeof_expression  go to state 50


state 69

   75 r_value: expression NEQ . expression

    LBRKT   shift, and go to state 37
    INC     shift, and go to state 38
    DEC     shift, and go to state 39
    ID      shift, and go to state 40
    NUM     shift, and go to state 41
    FNUM    shift, and go to state 42
    MINUS   shift, and go to state 43
    SIZEOF  shift, and go to state 44
    NOT     shift, and go to state 45
